added pics to anjelica and changed menu name

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="row align-items-center">
           
           <div class="col-6 col-xl-2" data-aos="fade-down">
-            <h1 class="mb-0"> </h1> <img src="images/marcel2.png" height="100" width="220">
+            <h1 class="mb-0"> </h1> <img src="images/marcel2.png" height="100" width="230">
           </div>
           <div class="col-10 col-md-8 d-none d-xl-block" data-aos="fade-down">
             <nav class="site-navigation position-relative text-right text-lg-center" role="navigation">
@@ -59,7 +59,7 @@
                 <li class="has-children">
                   <a href="single.html">Gallery</a>
                   <ul class="dropdown">
-                    <li><a href="#">Nature</a></li>
+                    <li><a href="#">Arina</a></li>
                     <li><a href="#">Portrait</a></li>
                     <li><a href="#">People</a></li>
                     <li><a href="#">Architecture</a></li>
@@ -118,19 +118,19 @@
             <div class="swiper-slide">
               <div class="image-wrap">
                 <div class="image-info">
-                  <h2 class="mb-3">Nature</h2>
+                  <h2 class="mb-3">Arina</h2>
                   <a href="single.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
                 </div>
-                <img src="images/img_1.jpg" alt="Image">
+                <img src="images/Arina1.jpg" alt="Image">
               </div>
             </div>
             <div class="swiper-slide">
               <div class="image-wrap">
                 <div class="image-info">
-                  <h2 class="mb-3">Portrait</h2>
+                  <h2 class="mb-3">Anjelica</h2>
                   <a href="single.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
                 </div>
-                <img src="images/img_2.jpg" alt="Image">
+                <img src="images/Anjelica1.jpg" alt="Image">
               </div>
             </div>
             <div class="swiper-slide">
