added Kostya photos and links

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Photon &mdash; Colorlib Website Template</title>
+    <title>Marcel's &mdash; Photography</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -61,7 +61,7 @@
                   <ul class="dropdown">
                     <li><a href="single.html">Arina</a></li>
                     <li><a href="Anjelica.html">Anjelica</a></li>
-                    <li><a href="#">People</a></li>
+                    <li><a href="Kostya&Nat.html">Kostya & Natalya</a></li>
                     <li><a href="#">Architecture</a></li>
                     <li><a href="#">Animals</a></li>
                     <li><a href="#">Sports</a></li>
@@ -76,7 +76,7 @@
                     </li>
                   </ul>
                 </li>
-                <li><a href="services.html">Services</a></li>
+               <!-- <li><a href="services.html">Services</a></li> -->
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
               </ul>
@@ -93,7 +93,7 @@
                   <a href="#" class="pl-3 pr-3"><span class="icon-twitter"></span></a>
                 </li>
                 <li>
-                  <a href="#" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
+                  <a href="https://www.instagram.com/pinzari.marcel/" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
                 </li>
                 <li>
                   <a href="#" class="pl-3 pr-3"><span class="icon-youtube-play"></span></a>
@@ -136,10 +136,10 @@
             <div class="swiper-slide">
               <div class="image-wrap">
                 <div class="image-info">
-                  <h2 class="mb-3">People</h2>
-                  <a href="single.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
+                  <h2 class="mb-3">Kostya & Natalya</h2>
+                  <a href="Kostya&Nat.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
                 </div>
-                <img src="images/img_3.jpg" alt="Image">
+                <img src="images/Kostya&Nat1.jpg" alt="Image">
               </div>
             </div>
             <div class="swiper-slide">
