--- a/single.html
+++ b/single.html
@@ -61,7 +61,7 @@
                   <ul class="dropdown">
                     <li><a href="single.html">Arina</a></li>
                     <li><a href="Anjelica.html">Anjelica</a></li>
-                    <li><a href="#">People</a></li>
+                    <li><a href="Kostya&Nat.html">Kostya & Natalya</a></li>
                     <li><a href="#">Architecture</a></li>
                     <li><a href="#">Animals</a></li>
                     <li><a href="#">Sports</a></li>
