Fixe Routing, about page and contact page

--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
               <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
                 <li class="active"><a href="index.html">Home</a></li>
                 <li class="has-children">
-                  <a href="single.html">Gallery</a>
+                  <a href="Arina.html">Gallery</a>
                   <ul class="dropdown">
-                    <li><a href="single.html">Arina</a></li>
+                    <li><a href="Arina.html">Arina</a></li>
                     <li><a href="Anjelica.html">Anjelica</a></li>
                     <li><a href="Kostya&Nat.html">Kostya & Natalya</a></li>
                     <li><a href="#">Architecture</a></li>
