--- a/Arina.html
+++ b/Arina.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Photo &mdash; Colorlib Website Template</title>
+    <title>Marcel's &mdash; Photography</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -57,9 +57,9 @@
               <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
                 <li><a href="index.html">Home</a></li>
                 <li class="has-children active">
-                  <a href="single.html">Gallery</a>
+                  <a href="Arina.html">Gallery</a>
                   <ul class="dropdown">
-                    <li><a href="single.html">Arina</a></li>
+                    <li><a href="Arina.html">Arina</a></li>
                     <li><a href="Anjelica.html">Anjelica</a></li>
                     <li><a href="Kostya&Nat.html">Kostya & Natalya</a></li>
                     <li><a href="#">Architecture</a></li>
@@ -76,7 +76,7 @@
                     </li>
                   </ul>
                 </li>
-                <li><a href="services.html">Services</a></li>
+                <!-- <li><a href="services.html">Services</a></li> -->
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
               </ul>
