--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
         <div class="row align-items-center">
           
           <div class="col-6 col-xl-2" data-aos="fade-down">
-            <h1 class="mb-0"><a href="index.html" class="text-black h2 mb-0">Photon</a></h1>
+            <h1 class="mb-0"><a href="index.html" class="text-black h2 mb-0"><img src="images/marcel2.png" height="100" width="230"></a></h1>
           </div>
           <div class="col-10 col-md-8 d-none d-xl-block" data-aos="fade-down">
             <nav class="site-navigation position-relative text-right text-lg-center" role="navigation">
@@ -57,11 +57,11 @@
               <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
                 <li><a href="index.html">Home</a></li>
                 <li class="has-children">
-                  <a href="single.html">Gallery</a>
+                  <a href="Arina.html">Gallery</a>
                   <ul class="dropdown">
-                    <li><a href="#">Nature</a></li>
-                    <li><a href="#">Portrait</a></li>
-                    <li><a href="#">People</a></li>
+                    <li><a href="Arina.html">Arina</a></li>
+                    <li><a href="Anjelica.html">Anjelica</a></li>
+                    <li><a href="Kostya&Nat.html">Kostya & Natalya</a></li>
                     <li><a href="#">Architecture</a></li>
                     <li><a href="#">Animals</a></li>
                     <li><a href="#">Sports</a></li>
@@ -76,7 +76,7 @@
                     </li>
                   </ul>
                 </li>
-                <li><a href="services.html">Services</a></li>
+               <!--- <li><a href="services.html">Services</a></li>-->
                 <li class="active"><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
               </ul>
@@ -119,13 +119,13 @@
         <div class="col-md-7">
           <div class="row mb-5 site-section">
             <div class="col-12 ">
-              <h2 class="site-section-heading text-center">About Us</h2>
+              <h2 class="site-section-heading text-center">About me</h2>
             </div>
           </div>
 
           <div class="row mb-5">
             <div class="col-md-7">
-              <img src="images/img_2.jpg" alt="Images" class="img-fluid">
+              <img src="images/Anjelica1.jpg" alt="Images" class="img-fluid">
             </div>
             <div class="col-md-4 ml-auto">
               <h3>Our Mission</h3>
