--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Photon &mdash; Colorlib Website Template</title>
+    <title>Marcel's &mdash; Photography</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -49,7 +49,7 @@
         <div class="row align-items-center">
           
           <div class="col-6 col-xl-2" data-aos="fade-down">
-            <h1 class="mb-0"><a href="index.html" class="text-black h2 mb-0">Photon</a></h1>
+            <h1 class="mb-0"><a href="index.html" class="text-black h2 mb-0"><img src="images/marcel2.png" height="100" width="230"></a></h1>
           </div>
           <div class="col-10 col-md-8 d-none d-xl-block" data-aos="fade-down">
             <nav class="site-navigation position-relative text-right text-lg-center" role="navigation">
@@ -57,7 +57,7 @@
               <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
                 <li><a href="index.html">Home</a></li>
                 <li class="has-children">
-                  <a href="single.html">Gallery</a>
+                  <a href="Arina.html">Arina</a>
                   <ul class="dropdown">
                     <li><a href="#">Nature</a></li>
                     <li><a href="#">Portrait</a></li>
@@ -76,7 +76,7 @@
                     </li>
                   </ul>
                 </li>
-                <li><a href="services.html">Services</a></li>
+                <!-- <li><a href="services.html">Services</a></li> -->
                 <li><a href="about.html">About</a></li>
                 <li class="active"><a href="contact.html">Contact</a></li>
               </ul>
@@ -173,14 +173,14 @@
             </div>
             <div class="col-lg-3 ml-auto">
               <div class="mb-3 bg-white">
-                <p class="mb-0 font-weight-bold">Address</p>
-                <p class="mb-4">203 Fake St. Mountain View, San Francisco, California, USA</p>
+                <p class="mb-0 font-weight-bold">Location</p>
+                <p class="mb-4">Sacramento, California, USA</p>
 
                 <p class="mb-0 font-weight-bold">Phone</p>
-                <p class="mb-4"><a href="#">+1 232 3235 324</a></p>
+                <p class="mb-4"><a href="#">(916)266-3570</a></p>
 
                 <p class="mb-0 font-weight-bold">Email Address</p>
-                <p class="mb-0"><a href="#">youremail@domain.com</a></p>
+                <p class="mb-0"><a href="#">Mpinzari1996@gmail.com</a></p>
 
               </div>
               
