--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
               <div class="image-wrap">
                 <div class="image-info">
                   <h2 class="mb-3">Arina</h2>
-                  <a href="single.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
+                  <a href="Arina.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
                 </div>
                 <img src="images/Arina1.jpg" alt="Image">
               </div>
