--- a/Anjelica.html
+++ b/Anjelica.html
@@ -61,11 +61,8 @@
                   <ul class="dropdown">
                     <li><a href="Arina.html">Arina</a></li>
                     <li><a href="Anjelica.html">Anjelica</a></li>
-                    <li><a href="#">Kostya & Natalya</a></li>
+                    <li><a href="Kostya&Nat.html">Kostya & Natalya</a></li>
                     <li><a href="#">Architecture</a></li>
-                    <li><a href="#">Animals</a></li>
-                    <li><a href="#">Sports</a></li>
-                    <li><a href="#">Travel</a></li>
                     <li class="has-children">
                       <a href="#">Sub Menu</a>
                       <ul class="dropdown">
@@ -133,18 +130,7 @@
         <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/Arina2.jpg" data-sub-html="<h4>Fading Light</h4><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam omnis quaerat molestiae, praesentium. Ipsam, reiciendis. Aut molestiae animi earum laudantium.</p>">
           <a href="#"><img src="images/Arina2.jpg" alt="IMage" class="img-fluid"></a>
         </div>
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/big-images/nature_big_3.jpg" data-sub-html="<h4>Fading Light</h4><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem reiciendis, dolorum illo temporibus culpa eaque dolore rerum quod voluptate doloribus.</p>">
-          <a href="#"><img src="images/nature_small_3.jpg" alt="IMage" class="img-fluid"></a>
-        </div>
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/big-images/nature_big_4.jpg" data-sub-html="<h4>Fading Light</h4><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim perferendis quae iusto omnis praesentium labore tempore eligendi quo corporis sapiente.</p>">
-          <a href="#"><img src="images/nature_small_4.jpg" alt="IMage" class="img-fluid"></a>
-        </div>
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/big-images/nature_big_5.jpg" data-sub-html="<h4>Fading Light</h4><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, voluptatum voluptate tempore aliquam, dolorem distinctio. In quas maiores tenetur sequi.</p>">
-          <a href="#"><img src="images/nature_small_5.jpg" alt="IMage" class="img-fluid"></a>
-        </div>
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/big-images/nature_big_6.jpg" data-sub-html="<h4>Fading Light</h4><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum cum culpa blanditiis illum, voluptatum iusto quisquam mollitia debitis quaerat maiores?</p>">
-          <a href="#"><img src="images/nature_small_6.jpg" alt="IMage" class="img-fluid"></a>
-        </div>
+
 
 
 
