--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <li class="has-children">
                   <a href="Arina.html">Gallery</a>
                   <ul class="dropdown">
-                    <li><a href="Arina.html">Arina</a></li>
+                    <li><a href="Arina.html">Arrina</a></li>
                     <li><a href="Anjelica.html">Anjelica</a></li>
                     <li><a href="Kostya&Nat.html">Kostya & Natalya</a></li>
                     <li><a href="#">Architecture</a></li>
