added nadiya and brought down main pics resolution

--- a/Kostya&Nat.html
+++ b/Kostya&Nat.html
@@ -62,7 +62,7 @@
                     <li><a href="arina.html">Arina</a></li>
                     <li><a href="Anjelica.html">Anjelica</a></li>
                     <li><a href="Kostya&Nat.html">Kostya & Natalya</a></li>
-                    <li><a href="#">Architecture</a></li>
+                    <li><a href="nadiya.html">Nadiya</a></li>
                     <li class="has-children">
                       <a href="#">Sub Menu</a>
                       <ul class="dropdown">
