--- a/contact.html
+++ b/contact.html
@@ -59,10 +59,10 @@
                 <li class="has-children">
                   <a href="Arina.html">Arina</a>
                   <ul class="dropdown">
-                    <li><a href="#">Nature</a></li>
-                    <li><a href="#">Portrait</a></li>
-                    <li><a href="#">People</a></li>
-                    <li><a href="#">Architecture</a></li>
+                    <li><a href="arina.html">Arina</a></li>
+                    <li><a href="Anjelica.html">Anjelica</a></li>
+                    <li><a href="Kostya&Nat.html">Kostya & Natalya</a></li>
+                    <li><a href="nadiya.html">Nadiya</a></li>
                     <li class="has-children">
                       <a href="#">Sub Menu</a>
                       <ul class="dropdown">
