--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <li class="has-children">
                   <a href="Arina.html">Gallery</a>
                   <ul class="dropdown">
-                    <li><a href="Arina.html">Arrina</a></li>
+                    <li><a href="Arina.html">Arina</a></li>
                     <li><a href="Anjelica.html">Anjelica</a></li>
                     <li><a href="Kostya&Nat.html">Kostya & Natalya</a></li>
                     <li><a href="#">Architecture</a></li>
@@ -79,7 +79,6 @@
               </ul>
             </nav>
           </div>
-
           <div class="col-6 col-xl-2 text-right" data-aos="fade-down">
             <div class="d-none d-xl-inline-block">
               <ul class="site-menu js-clone-nav ml-auto list-unstyled d-flex text-right mb-0" data-class="social">
@@ -106,7 +105,7 @@
       </div>
       
     </header>
-
+    <html><center>Website is currenly being updated. More pics coming soon :)</center></html>
 
 
   <div class="container-fluid" data-aos="fade" data-aos-delay="500">
@@ -118,7 +117,7 @@
                   <h2 class="mb-3">Arina</h2>
                   <a href="Arina.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
                 </div>
-                <img src="images/Arina1.jpg" alt="Image">
+                <img src="images/main/arina-main1.jpg" alt="Image">
               </div>
             </div>
             <div class="swiper-slide">
@@ -127,7 +126,7 @@
                   <h2 class="mb-3">Anjelica</h2>
                   <a href="Anjelica.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
                 </div>
-                <img src="images/Anjelica1.jpg" alt="Image">
+                <img src="images/main/anjelica-main1.jpg" alt="Image">
               </div>
             </div>
             <div class="swiper-slide">
@@ -136,16 +135,16 @@
                   <h2 class="mb-3">Kostya & Natalya</h2>
                   <a href="Kostya&Nat.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
                 </div>
-                <img src="images/Kostya&Nat1.jpg" alt="Image">
+                <img src="images/main/kosty&nat-main1.jpg" alt="Image">
               </div>
             </div>
             <div class="swiper-slide">
               <div class="image-wrap">
                 <div class="image-info">
-                  <h2 class="mb-3">Architecture</h2>
-                  <a href="single.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
+                  <h2 class="mb-3">Nadiya</h2>
+                  <a href="nadiya.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
                 </div>
-                <img src="images/img_4.jpg" alt="Image">
+                <img src="images/main/nadiya-main1.jpg" alt="Image">
               </div>
             </div>
 
