--- a/nadiya.html
+++ b/nadiya.html
@@ -117,19 +117,21 @@
         <div class="col-md-7">
           <div class="row mb-5">
             <div class="col-12 ">
-              <h2 class="site-section-heading text-center">Arina</h2>
+              <h2 class="site-section-heading text-center">Nadiya</h2>
             </div>
           </div>
         </div>
     
       </div>
-      <div class="row" id="lightgallery">
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/arina1.jpg" data-sub-html="<h4>Fading Light</h4><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor doloremque hic excepturi fugit, sunt impedit fuga tempora, ad amet aliquid?</p>">
-          <a href="#"><img src="images/Arina1.jpg" alt="IMage" class="img-fluid"></a>
+    <!-- <div class="row" id="lightgallery">
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/Anjelica1.jpg" data-sub-html="<h4>Fading Light</h4><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor doloremque hic excepturi fugit, sunt impedit fuga tempora, ad amet aliquid?</p>">
+          <a href="#"><img src="images/Anjelica1.jpg" alt="IMage" class="img-fluid"></a>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/Arina2.jpg" data-sub-html="<h4>Fading Light</h4><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam omnis quaerat molestiae, praesentium. Ipsam, reiciendis. Aut molestiae animi earum laudantium.</p>">
           <a href="#"><img src="images/Arina2.jpg" alt="IMage" class="img-fluid"></a>
-        </div>
+        </div> -->
+
+
 
 
       </div>
