added netlify tag for contact form

--- a/contact.html
+++ b/contact.html
@@ -125,7 +125,7 @@
               <form action="#">
                
 
-                <div class="row form-group">
+                <div class="row form-group" data-netlify="true">
                   <div class="col-md-6 mb-3 mb-md-0">
                     <label class="text-black" for="fname">First Name</label>
                     <input type="text" id="fname" class="form-control">
