--- a/contact.html
+++ b/contact.html
@@ -159,7 +159,7 @@
                   </div>
                 </div>
 
-                <div class="row form-group">
+                <div class="row form-group" data-netlify="true" >
                   <div class="col-md-12">
                     <input type="submit" value="Send Message" class="btn btn-primary py-2 px-4 text-white">
                   </div>
