added phone and email

--- a/contact.html
+++ b/contact.html
@@ -174,10 +174,10 @@
                 <p class="mb-4">Sacramento, California, USA</p>
 
                 <p class="mb-0 font-weight-bold">Phone</p>
-                <p class="mb-4"><a href="#">(916)266-3570</a></p>
+                <p class="mb-4"><a href="tel:9162663570">(916)266-3570</a></p>
 
                 <p class="mb-0 font-weight-bold">Email Address</p>
-                <p class="mb-0"><a href="#">Mpinzari1996@gmail.com</a></p>
+                <p class="mb-0"><a href="mailto:mpinzari1996@gmail.com">Mpinzari1996@gmail.com</a></p>
 
               </div>
               
