--- a/contact.html
+++ b/contact.html
@@ -116,7 +116,7 @@
         <div class="col-md-7">
           <div class="row mb-5">
             <div class="col-12 ">
-              <h2 class="site-section-heading text-center">Contact Us</h2>
+              <h2 class="site-section-heading text-center">Contact</h2>
             </div>
           </div>
 
@@ -125,7 +125,7 @@
               <form action="#">
                
 
-                <div class="row form-group">
+              <!--  <div class="row form-group">
                   <div class="col-md-6 mb-3 mb-md-0">
                     <label class="text-black" for="fname">First Name</label>
                     <input type="text" id="fname" class="form-control">
@@ -163,14 +163,14 @@
                   <div class="col-md-12">
                     <input type="submit" value="Send Message" class="btn btn-primary py-2 px-4 text-white">
                   </div>
-                </div>
+                </div> -->
 
     
               </form>
             </div>
-            <div class="col-lg-3 ml-auto">
+            <div class="col-sm-8 ml-auto">
               <div class="mb-3 bg-white">
-                <p class="mb-0 font-weight-bold">Location</p>
+                <p class="font-weight-bold">Location</p>
                 <p class="mb-4">Sacramento, California, USA</p>
 
                 <p class="mb-0 font-weight-bold">Phone</p>
